--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
       padding:0.8em 0.9em;
       width:60%;
       float:left;
-      font-family:'Raleway';
     }
     section.shim article .body h1{
       margin-bottom:6px;
       font-family:'Lato';
       font-weight:700;
+    }
+    section.shim article .body p{
+      opacity:0.6;
+      font-family:'Raleway';
     }
     section.shim article .button{
       height:180px;
