--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     }
     header.site .wrapper p{
       margin-top:9px;
+      opacity:0.6;
       font-family:'Raleway', sans-serif;
     }
     header.site .wrapper p.download{
