Updated reset.css to new

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>shimThis.js - shim an element onto another</title>
+  <title>shimThis.js - shim an element onto another // by danieltamkin</title>
   <link rel="stylesheet" type="text/css" href="reset.css"/>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="centerThis.js"></script>
